...
import io.altenems.companion.android.loading.LoadingScreen
import io.altenems.companion.android.util.compose.HAPreviews
import io.altenems.companion.android.util.compose.webview.HAWebView
import timber.log.Timber

@VisibleForTesting
const val CONNECTION_SCREEN_TAG = "connection_screen"

@VisibleForTesting
const val CONNECTION_SCREEN_ERROR_PLACEHOLDER_TAG = "connection_screen_error"

private val ICON_SIZE = 64.dp

...
