...
import io.altenems.companion.android.common.compose.theme.MaxButtonWidth
import io.altenems.companion.android.util.compose.HAPreviews

private val MaxContentWidth = MaxButtonWidth

@VisibleForTesting
internal const val ETHERNET_TAG = "ethernet_tag"
internal const val VPN_TAG = "vpn_tag"

@Composable
fun SetHomeNetworkScreen(
    onHelpClick: suspend () -> Unit,
    onGotoNextScreen: () -> Unit,
    viewModel: SetHomeNetworkViewModel,
...
